<resources>
    <string name="app_name">Eventrio</string>
    <string name="title_activity_maps">Map</string>

    <string name="heightOfTag">20dp</string>
    <string name="facebook_app_id">543960872701904</string>
    <string name="fb_login_protocol_scheme">fb543960872701904</string>
    <string name="facebook_application_id" translatable="false">543960872701904</string>


    <string name="preference_file_key">pl.aogiri.eventrio.settings</string>
    <string name="userData_fbid">userFBid</string>
    <string name="userData_userid">userid</string>
    <string name="userData_username">username</string>
    <string name="userData_picture">picture</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="settings">settings</string>
    <string name="notification">Notifications</string>
    <string name="mEvents">Events</string>
    <string name="eFolower">Friends</string>

    <string name="apiUser">admin</string>
    <string name="apiPassword">password</string>
    <string name="CreateAnEvent">Create an event</string>
    <string name="eventName">Event name</string>
    <string name="eventNameHint">Enter the name of the event not longer than 40 characters.</string>
    <string name="eventDateBeg">Start date</string>
    <string name="eventDateBegHint">eventDateBegHint</string>
    <string name="eventDateEnd">End date</string>
    <string name="eventDateEndHint">eventDateEndHint</string>
    <string name="eventDescription">eventDescription</string>
    <string name="eventDescriptionHint">eventDescriptionHint</string>
    <string name="eventAddress">eventAddress</string>
    <string name="eventAddressHint">eventAddressHint</string>
    <string name="eventTagsHint">eventTagsi</string>
    <string name="eventTags">eventTags</string>
    <string name="eventImageHint">eventImageHint</string>
    <string name="eventImage">eventImage</string>
    <string name="termsPrivatePolicy">Terms and private policy</string>
    <string name="checkBoxMarketing">Marketing</string>


</resources>
