<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">


    <LinearLayout
        android:id="@+id/containerMain"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/cardview_light_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#dc6770"
            android:gravity="top"
            android:orientation="vertical"
            android:paddingLeft="12dp"
            android:paddingTop="22dp"
            android:paddingRight="12dp"
            android:paddingBottom="22dp">

            <TextView
                android:id="@+id/profileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/cardview_light_background"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profileStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="#55ffffff" />

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/com_facebook_profile_picture_blank_square" />

            <Button
                android:id="@+id/profileSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button_settings"
                android:paddingStart="100dp"
                android:paddingEnd="100dp"
                android:text="@string/settings"
                android:textColor="#964248" />

            <LinearLayout
                android:id="@+id/SliderDots"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/first"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:background="@drawable/active_dot" />

                <ImageView
                    android:id="@+id/second"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/non_active_dot" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="99">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="33"
                android:background="#ca555e"
                android:orientation="horizontal"
                android:paddingHorizontal="8dp"
                android:paddingVertical="10dp"
                android:clickable="true"
                android:id="@+id/notfisClick">

                <TextView
                    android:id="@+id/numberNotfi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="99"
                    android:textAlignment="viewStart"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/notfi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="@string/notification"
                    android:textAlignment="viewStart"
                    android:textColor="@color/_white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="33"
                android:background="#ca555e"
                android:orientation="horizontal"
                android:paddingHorizontal="8dp"
                android:paddingVertical="10dp"
                android:clickable="true"
                android:id="@+id/eventsClick">

                <TextView
                    android:id="@+id/numberEvents"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="9999"
                    android:textAlignment="viewStart"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="@string/mEvents"
                    android:textAlignment="viewStart"
                    android:textColor="@color/trans_white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="33"
                android:background="#ca555e"
                android:orientation="horizontal"
                android:paddingHorizontal="8dp"
                android:paddingVertical="10dp"
                android:clickable="true"
                android:id="@+id/friendsClick">

                <TextView
                    android:id="@+id/numberFriends"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="9999"
                    android:textAlignment="viewStart"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/friend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="@string/eFolower"
                    android:textAlignment="viewStart"
                    android:textColor="@color/trans_white" />
            </LinearLayout>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycleProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

    <ImageView
        android:id="@+id/profileBack"
        android:layout_width="49dp"
        android:layout_height="69dp"
        android:src="@mipmap/back"
        android:paddingTop="22dp"
        android:paddingBottom="22dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:clickable="true"/>

</FrameLayout>